<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textShortMessage|textAutoCorrect|textAutoComplete"
            android:hint="@string/add_your_comments" android:textSize="24sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toStartOf="@+id/confirmButton"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>