<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:id="@+id/layout">

    <ImageView
            android:id="@+id/smiley"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/smiley_normal"
            android:layout_margin="16dp"
            android:contentDescription="@string/smiley_image_description"/>

    <ImageView
            android:id="@+id/buttonIcon"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:src="@drawable/ic_note_add_black"
            android:layout_margin="16dp"
            android:contentDescription="@string/new_note"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/smiley"
            app:layout_constraintStart_toStartOf="@+id/smiley" android:layout_marginStart="8dp"/>
    <ImageView
            android:id="@+id/historyIcon"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:src="@drawable/ic_history_black"
            android:contentDescription="@string/history_icon"
            app:layout_constraintBottom_toBottomOf="@+id/smiley"
            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/smiley"/>
    <!--<Button-->
            <!--android:text="@string/button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/button"-->
            <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>-->

</android.support.constraint.ConstraintLayout>